--- a/Frontend/signin.css
+++ b/Frontend/signin.css
@@ -12,7 +12,34 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
+
+header {
+    color: white;
+    text-align: center;
+    padding: 20px 0;
+    margin-bottom: 20px;
+}
+
+header #sit-logo {
+    width: 80px;
+    height: auto;
+    margin: 0 15px;
+}
+
+header h1 {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 1.5em;
+}
+
+header h2 {
+    margin: 5px 0 0;
+    font-size: 1em;
+}
+
 
 .container {
     background-color: #fff;
@@ -97,6 +124,11 @@ form button[type="submit"]:hover {
 
     body{
         padding: 0;
+    }
+
+    header h1{
+        font-size: large;
+        margin: 10px 0px;
     }
 
     form h1{
